# cognis-vigil

./: .gitignore  CHANGELOG.md  DISCLAIMER.md  NOTICE  README.md  RESULTS.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
bench/: __init__.py  benchmark.py  evaluate.py  metrics.py  results.json  run_all.py
cognis_vigil/: __init__.py  cli.py  crosscue.py  fusion.py  geo.py  heatmap.py  model.py  motion.py  report.py  smalltarget.py  synth.py
docs/: ARCHITECTURE.md  COMPLIANCE.md  LIMITATIONS.md  SOLIC_CA1_MAPPING.md  USAGE.md
examples/: run_demo.py
scryer/: __init__.py  cli.py  coverage.py  crosscue.py  export.py  fusion.py  geo.py  geojson.py  imagery.py  kinematics.py  observer.py  report.py  synth.py
tests/: test_bench.py  test_cli.py  test_coverage.py  test_crosscue.py  test_export.py  test_fusion.py  test_geo.py  test_heatmap_extra.py  test_kinematics.py  test_model.py  test_motion.py  test_observer.py  test_report_geojson.py  test_smalltarget.py  test_smalltarget_extra.py  test_vigil.py
